buen acuerdo a altas masas

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -591,7 +591,6 @@ We only report results from overdensities with at least $100$ particles.
 Finally, we store the values obtained for the virial radius, virial
 mass and concentration.
 
-
 Figure \ref{fig:mdv} shows the results that compare the concentration
 values in the simulated halos from the three different methods.
 At zeroth order the results are consistent.
@@ -620,6 +619,11 @@ In this relationship our methods represents a compromise between the
 velocity and density methods.
 The slope is flatter and the overall normalization is below the
 velocity method and above the density.
+We also note that at high masses ($M>10^{14}\hMsun$) our method 
+and the velocity method show a reasonable agreement within the
+uncertainties. 
+ 
+
 
 
 \begin{figure*}
