nueva grafica de velocity-density method

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -551,13 +551,15 @@ regardless of the particle number. {\bf Necesitamos entender el
 \label{sec:data}
 \begin{figure*}
   \begin{center}
-    \includegraphics[width=0.48\textwidth]{mass-velocity.pdf}
-    \includegraphics[width=0.48\textwidth]{mass-density.pdf}
+    \includegraphics[width=0.33\textwidth]{mass-velocity.pdf}
+    \includegraphics[width=0.33\textwidth]{mass-density.pdf}
+    \includegraphics[width=0.33\textwidth]{density-velocity.pdf}
   \end{center}
   \caption{Comparison between the concentrations measured by our
-    method and the maximum velocity (left) and density (right)
+    method and the maximum velocity (left) and density (middle)
     methods. The line indicates the equal value between the two
-    techniques.
+    techniques. The right panel compares the results of the maximum
+    velocity and density methods.
   \label{fig:mdv}}
 \end{figure*}
 
